@@ -45,10 +45,7 @@ import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.Predicate;
 import java.io.Serializable;
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.hibernate.criterion.Order.asc;
 import static org.hibernate.criterion.Order.desc;
@@ -1089,57 +1086,65 @@ public class GumgaGenericRepository<T, ID extends Serializable> extends SimpleJp
         gQuery
             .getParams()
             .forEach((key, value) -> {
-                Parameter<?> parameter = query.getParameter(key);
-                if(parameter.getParameterType() != null) {
-                    if(parameter.getParameterType().isEnum()) {
-                        query.setParameter(key, Enum.valueOf((Class<Enum>) parameter.getParameterType(), value.toString()));
-                    } else {
-                        switch (parameter.getParameterType().getSimpleName()) {
-                            case "Long":
-                                query.setParameter(key, Long.valueOf(value.toString()));
-                                break;
-                            case "BigDecimal":
-                                query.setParameter(key, new BigDecimal(value.toString()));
-                                break;
-                            case "GumgaBarCode":
-                                query.setParameter(key, new GumgaBarCode(value.toString()));
-                                break;
-                            case "GumgaBoolean":
-                                query.setParameter(key, new GumgaBoolean(Boolean.valueOf(value.toString())));
-                                break;
-                            case "GumgaCEP":
-                                query.setParameter(key, new GumgaCEP(value.toString()));
-                                break;
-                            case "GumgaCNPJ":
-                                query.setParameter(key, new GumgaCNPJ(value.toString()));
-                                break;
-                            case "GumgaCPF":
-                                query.setParameter(key, new GumgaCPF(value.toString()));
-                                break;
-                            case "GumgaEMail":
-                                query.setParameter(key, new GumgaEMail(value.toString()));
-                                break;
-                            case "GumgaMoney":
-                                query.setParameter(key, new GumgaMoney(new BigDecimal(value.toString())));
-                                break;
-                            case "GumgaMultiLineString":
-                                query.setParameter(key, new GumgaMultiLineString(value.toString()));
-                                break;
-                            case "GumgaOi":
-                                query.setParameter(key, new GumgaOi(value.toString()));
-                                break;
-                            case "GumgaPhoneNumber":
-                                query.setParameter(key, new GumgaPhoneNumber(value.toString()));
-                                break;
-                            case "GumgaURL":
-                                query.setParameter(key, new GumgaURL(value.toString()));
-                                break;
-                            default:
-                                query.setParameter(key, value);
+                Optional<Parameter<?>> parameterOptional = query
+                        .getParameters()
+                        .stream()
+                        .filter(parameter -> parameter.getName().equals(key))
+                        .findFirst();
+//                Parameter<?> parameter = query.getParameter(key);
+                if(parameterOptional.isPresent()) {
+                    Parameter<?> parameter = parameterOptional.get();
+                    if(parameter.getParameterType() != null) {
+                        if(parameter.getParameterType().isEnum()) {
+                            query.setParameter(key, Enum.valueOf((Class<Enum>) parameter.getParameterType(), value.toString()));
+                        } else {
+                            switch (parameter.getParameterType().getSimpleName()) {
+                                case "Long":
+                                    query.setParameter(key, Long.valueOf(value.toString()));
+                                    break;
+                                case "BigDecimal":
+                                    query.setParameter(key, new BigDecimal(value.toString()));
+                                    break;
+                                case "GumgaBarCode":
+                                    query.setParameter(key, new GumgaBarCode(value.toString()));
+                                    break;
+                                case "GumgaBoolean":
+                                    query.setParameter(key, new GumgaBoolean(Boolean.valueOf(value.toString())));
+                                    break;
+                                case "GumgaCEP":
+                                    query.setParameter(key, new GumgaCEP(value.toString()));
+                                    break;
+                                case "GumgaCNPJ":
+                                    query.setParameter(key, new GumgaCNPJ(value.toString()));
+                                    break;
+                                case "GumgaCPF":
+                                    query.setParameter(key, new GumgaCPF(value.toString()));
+                                    break;
+                                case "GumgaEMail":
+                                    query.setParameter(key, new GumgaEMail(value.toString()));
+                                    break;
+                                case "GumgaMoney":
+                                    query.setParameter(key, new GumgaMoney(new BigDecimal(value.toString())));
+                                    break;
+                                case "GumgaMultiLineString":
+                                    query.setParameter(key, new GumgaMultiLineString(value.toString()));
+                                    break;
+                                case "GumgaOi":
+                                    query.setParameter(key, new GumgaOi(value.toString()));
+                                    break;
+                                case "GumgaPhoneNumber":
+                                    query.setParameter(key, new GumgaPhoneNumber(value.toString()));
+                                    break;
+                                case "GumgaURL":
+                                    query.setParameter(key, new GumgaURL(value.toString()));
+                                    break;
+                                default:
+                                    query.setParameter(key, value);
+                            }
                         }
+                    } else {
+                        query.setParameter(key, value);
                     }
-                } else {
-                    query.setParameter(key, value);
                 }
             });
 
